    * [S2GRAPH-199] - Changing query more intuitively by using `columnName` instead of `from/to` in label field name.
    * [S2GRAPH-200] - docker image could not include extra jars.
    * [S2GRAPH-204] - Avoid N + 1 queries in GraphQL
    * [S2GRAPH-207] - Provides a way to query data with the value of the Vertex property in a GraphQL query

** New Feature
    * [S2GRAPH-123] - Support different index on out/in direction.
    * [S2GRAPH-125] - Add options field on Label model for controlling advanced options.
    * [S2GRAPH-166] - Provide embeddable storage backend using RocksDB.
    * [S2GRAPH-175] - Provide Elastic Search Index Provider.
    * [S2GRAPH-172] - Suggest to implement GraphQL as standard web interface for S2Graph.
    * [S2GRAPH-177] - Add support for createServiceColumn/addVertex APIs on GraphQL.
    * [S2GRAPH-185] - Support Spark Structured Streaming to work with data in streaming and batch.
    * [S2GRAPH-183] - Provide batch job to dump data stored in HBase into file.

** Task
    * [S2GRAPH-162] - Update year in the NOTICE file.

Release 0.1.0 - Released

  NEW FEATURES

    S2GRAPH-34: Provide option to select which field in edge's properties to run timeDecay function (Committed by DOYUNG YOON).

    S2GRAPH-35: Provide normalize option on query (Committed by DOYUNG YOON).

    S2GRAPH-36: Provide Blocking API for Edge/Vertex operations (Committed by DOYUNG YOON).

    S2GRAPH-32: Support variable such as now, day, hour on query (Committed by DOYUNG YOON).

    S2GRAPH-45: Provide way to call specific bucket on experiment (Committed by DOYUNG YOON).

    S2GRAPH-33: Support weighted sum of multiple query results (Committed by DOYUNG YOON).

    S2GRAPH-50: Provide new HBase Storage Schema (Committed by DOYUNG YOON).

    S2GRAPH-60: Add divide operation to scorePropagateOp.
        	(Contributed by Junki Kim<wishoping@gmail.com>, committed by DOYUNG YOON).

    S2GRAPH-12: Add Label Name Swap Feature.