@@ -1,0 +1,30 @@
+<!---
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+--->
+
+# MovieLens
+
+GroupLens Research has collected and made available rating data sets from the MovieLens web site (http://movielens.org).
+The data sets were collected over various periods of time, depending on the size of the set.
+
+This dataset (ml-latest-small) describes 5-star rating and free-text tagging activity from MovieLens, a movie recommendation service. 
+It contains 100004 ratings and 1296 tag applications across 9125 movies. 
+These data were created by 671 users between January 09, 1995 and October 16, 2016. 
+This dataset was generated on October 17, 2016.
